--- a/src/Versatil.Web/Views/Shared/_Sidebar.cshtml
+++ b/src/Versatil.Web/Views/Shared/_Sidebar.cshtml
@@ -70,7 +70,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/layout/fixed-footer.html" class="nav-link">
+                            <a class="nav-link" asp-action="Index" asp-controller="Marcas">
                                 <i class="fas fa-angle-right nav-icon"></i>
                                 <p>Cadastro de marcas</p>
                             </a>
