Filizado Controle Setores e Serviços

--- a/src/Versatil.Web/Views/Funcionarios/Create.cshtml
+++ b/src/Versatil.Web/Views/Funcionarios/Create.cshtml
@@ -190,7 +190,7 @@
             unmaskAsNumber: true
         });
         txtSalario.val(0);
-        $(':input').inputmask()
+        $(':input').inputmask();
 
         //Consultar CPF
         txtCPF.blur(function () {
