--- a/src/Versatil.Web/Views/Shared/_Layout.cshtml
+++ b/src/Versatil.Web/Views/Shared/_Layout.cshtml
@@ -139,6 +139,7 @@
     <script src="~/themes/js/toasts.message.js" asp-append-version="true"></script>
     <script src="~/themes/js/confirmacao.message.js" asp-append-version="true"></script>
     <script src="~/themes/js/clsgeral.js" asp-append-version="true"></script>
+    <script src="~/themes/js/scripts.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 
