--- a/src/Versatil.Web/Views/Shared/_Sidebar.cshtml
+++ b/src/Versatil.Web/Views/Shared/_Sidebar.cshtml
@@ -82,13 +82,13 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/layout/fixed-topnav.html" class="nav-link">
+                            <a class="nav-link" asp-action="Index" asp-controller="Servicos">
                                 <i class="fas fa-angle-right nav-icon"></i>
                                 <p>Cadastro de serviços</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/layout/fixed-footer.html" class="nav-link">
+                            <a class="nav-link" asp-action="Index" asp-controller="Setores">
                                 <i class="fas fa-angle-right nav-icon"></i>
                                 <p>Cadastro de setores</p>
                             </a>
