--- a/src/Versatil.Web/Views/Shared/_Sidebar.cshtml
+++ b/src/Versatil.Web/Views/Shared/_Sidebar.cshtml
@@ -2,7 +2,7 @@
 <aside class="main-sidebar elevation-4 sidebar-light-info">
     <!-- Brand Logo -->
     <div style="text-align: center;">
-        <a href="index3.html" class="brand-link navbar-info">
+        <a class="brand-link navbar-info" asp-action="Index" asp-controller="Home">
             <img src="~/themes/img/logoversatilp.png" alt="Versátil" class="elevation-0" width="80%" style="opacity: .8">
             @* <span class="brand-text font-weight-light">AdminLTE 3</span> *@
         </a>
@@ -64,7 +64,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/layout/fixed-sidebar.html" class="nav-link">
+                            <a class="nav-link" asp-action="Index" asp-controller="Clientes">
                                 <i class="fas fa-angle-right nav-icon"></i>
                                 <p>Cadastro de fornecedores</p>
                             </a>
@@ -102,7 +102,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a class="nav-link" asp-action="Index" asp-controller="Clientes">
                         <i class="nav-icon fas fa-users"></i>
                         <p>
                             Clientes
