--- a/src/Versatil.Web/Views/PlanoDeContas/Index.cshtml
+++ b/src/Versatil.Web/Views/PlanoDeContas/Index.cshtml
@@ -28,20 +28,20 @@
         </div>
         <div class="card-body">
 
-            <div class="card elevation-1">
+            <div class="card collapsed-card elevation-1">
                 <div class="card-header">
                     <h3 class="card-title">1 - @Model.Demonstrativo.nome</h3>
                     <div class="card-tools">
                         <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
-                            <i class="fas fa-minus"></i>
+                            <i class="fas fa-plus"></i>
                         </button>
                     </div>
                 </div>
-                <div class="card-body" style="display: block; padding: 0px 0px 0px 20px">
+                <div class="card-body" style="padding: 0px 0px 0px 20px">
                     <!--GRUPOS-->
                     @foreach (var Grupos in GruposService.GetGruposAll(1))
                     {
-                        <div class="card elevation-0">
+                        <div class="card collapsed-card elevation-0">
                             <div class="card-header">
                                 <h3 class="card-title">1.@Grupos.codigo - @Grupos.nome</h3>
 
@@ -56,7 +56,7 @@
                                         <i class="fas fa-trash"></i>
                                     </button>
                                     <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
-                                        <i class="fas fa-minus"></i>
+                                        <i class="fas fa-plus"></i>
                                     </button>
                                 </div>
                             </div>
@@ -64,7 +64,7 @@
                                 <!--SUBGRUPOS-->
                                 @foreach (var Subgrupos in SubgruposService.GetSubgruposAll(Grupos.id))
                                 {
-                                    <div class="card elevation-0">
+                                    <div class="card collapsed-card elevation-0">
                                         <div class="card-header">
                                             <h3 class="card-title">1.@Grupos.codigo.@Subgrupos.codigo - @Subgrupos.nome</h3>
 
@@ -79,7 +79,7 @@
                                                     <i class="fas fa-trash"></i>
                                                 </button>
                                                 <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
-                                                    <i class="fas fa-minus"></i>
+                                                    <i class="fas fa-plus"></i>
                                                 </button>
                                             </div>
                                         </div>
@@ -87,7 +87,7 @@
                                             <!--CONTAS-->
                                             @foreach (var Contas in ContasService.GetContasAll(Grupos.id, Subgrupos.id))
                                             {
-                                                <div class="card elevation-0">
+                                                <div class="card collapsed-card elevation-0">
                                                     <div class="card-header">
                                                         <h3 class="card-title">1.@Grupos.codigo.@Subgrupos.codigo.@Contas.codigo - @Contas.nome</h3>
 
